refactor for publication

--- a/_includes/css/page.css
+++ b/_includes/css/page.css
@@ -9,6 +9,7 @@
 .page-title {
   font: var(--font-display);
   letter-spacing: var(--font-display-spacing);
+  font-size: 50px;
   margin: 0;
   text-wrap: balance;
   color: var(--color-base);
