--- a/_includes/css/navbar.css
+++ b/_includes/css/navbar.css
@@ -2,10 +2,19 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 1rem;
-  row-gap: 1rem;
+  row-gap: 0.5rem;
   justify-content: space-between;
-  padding: 2rem min(5vw, 5rem);
+  padding: 0.6rem min(5vw, 5rem);
   align-items: center;
+
+}
+
+[data-theme="dark"] .navbar {
+  background: #252525;
+}
+
+[data-theme="light"] .navbar {
+  background: #f5f5f5;
 }
 
 .navbar-links {
@@ -15,7 +24,7 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 1.5rem;
-  font: var(--font-ui-bold);
+  font-family: var(--font-ui-bold), serif;
   align-items: center;
 
   & [aria-current="page"] {
@@ -32,4 +41,5 @@
 
 .navbar-home {
   text-decoration: none;
+  font-family: var(--font-navbar-home), sans-serif;
 }
